messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-messaging-app
        image: your-django-app-image:latest
        ports:
        - containerPort: 8000
