messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-blue
spec:
  selector:
    app: messaging-app-blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-green
spec:
  selector:
    app: messaging-app-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
